Fix missing background bug

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -6,7 +6,7 @@
 
 body {
 	margin: 10px;
-	background: #eee url(images/bg.png) repeat 0 0;
+	background: #eee image-url('bg.png') repeat 0 0;
 }
 
 /* Begin Header */
